Migrate DTO classes to records