@@ -19,6 +19,18 @@ configurations {
     compile.exclude module: "spring-boot-starter-tomcat"
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 testSets {
     benchmark
 }
